# beauty

./: .env.example  .gitignore  Dockerfile  Makefile  conftest.py  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
beauty/: app.py  constants.py  depends.py  enums.py  exceptions.py  meili.py  models.py  redis.py  responses.py  schemas.py  settings.py  tasks.py  utils.py
beauty/origin/: __init__.py  bcoderss.py  cnmo.py  netbian.py  win3000.py
beauty/rearq/: __init__.py  tasks.py
beauty/routers/: __init__.py  auth.py  collection.py  feedback.py  picture.py  proxy.py  user.py
beauty/third/: meili.py  minio.py  redis.py  s3.py  wechat.py
migrations/models/: 0_20221203162052_init.py  0_20221204151728_init.py  0_20221209172603_init.py  0_20230116214413_init.py  1_20221205205414_update.py  1_20221210112611_update.py  2_20221207120402_update.py  3_20221208114858_update.py
tests/: test_utils.py
tests/origin/: test_bcoderss.py  test_cnmo.py  test_netbian.py  test_win3000.py
